--- a/package.json
+++ b/package.json
@@ -1,50 +1,89 @@
 {
-  "name": "ejudge-submitter",
-  "displayName": "<e>judge Submitter",
-  "description": "",
-  "version": "0.0.1",
-  "engines": {
-    "vscode": "^1.70.0"
-  },
-  "categories": [
-    "Other"
-  ],
-  "activationEvents": [
-    "onCommand:ejudge-submitter.submitProblem"
-  ],
-  "main": "./out/extension.js",
-  "contributes": {
-    "commands": [
-      {
-        "command": "ejudge-submitter.submitProblem",
-        "title": "Submit Problem",
-        "category": "<e>judge"
-      }
-    ]
-  },
-  "scripts": {
-    "vscode:prepublish": "npm run compile",
-    "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
-    "pretest": "npm run compile && npm run lint",
-    "lint": "eslint src --ext ts",
-    "test": "node ./out/test/runTest.js"
-  },
-  "devDependencies": {
-    "@types/vscode": "^1.70.0",
-    "@types/glob": "^7.2.0",
-    "@types/mocha": "^9.1.1",
-    "@types/node": "16.x",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
-    "eslint": "^8.20.0",
-    "glob": "^8.0.3",
-    "mocha": "^10.0.0",
-    "typescript": "^4.7.4",
-    "@vscode/test-electron": "^2.1.5",
-
-    "axios": "^0.27.2",
-    "cheerio": "^1.0.0-rc.12",
-    "https": "^1.0.0"
-  }
+	"name": "ejudge-submitter",
+	"displayName": "<e>judge Submitter",
+	"description": "",
+	"version": "0.0.1",
+	"engines": {
+		"vscode": "^1.70.0"
+	},
+	"categories": [
+		"Other"
+	],
+	"activationEvents": [
+		"onCommand:ejudge-submitter.login",
+		"onCommand:ejudge-submitter.openProblem",
+		"onCommand:ejudge-submitter.submitProblem"
+	],
+	"main": "./out/extension.js",
+	"contributes": {
+		"commands": [
+			{
+				"command": "ejudge-submitter.login",
+				"title": "Login to <e>judge",
+				"category": "<e>judge"
+			},
+			{
+				"command": "ejudge-submitter.openProblem",
+				"title": "Open a problem by ID",
+				"category": "<e>judge"
+			},
+			{
+				"command": "ejudge-submitter.submitProblem",
+				"title": "Submit Problem",
+				"category": "<e>judge"
+			}
+		],
+		"viewsContainers": {
+			"activitybar": [
+				{
+					"id": "ejudge-submitter",
+					"title": "<e>judge",
+					"icon": "$(file-code)"
+				}
+			]
+		},
+		"viewsWelcome": [
+			{
+				"view": "ejudge-submitter.courseTree",
+				"contents": "Login to <e>judge first !\n[Go to login page](command:ejudge-submitter.login)"
+			}
+		],
+		"views": {
+			"ejudge-submitter": [
+				{
+					"id": "ejudge-submitter.courseTree",
+					"name": "Courses",
+					"type": "tree",
+					"visibility": "visible"
+				}
+			]
+		}
+	},
+	"scripts": {
+		"vscode:prepublish": "npm run compile",
+		"compile": "tsc -p ./",
+		"watch": "tsc -watch -p ./",
+		"pretest": "npm run compile && npm run lint",
+		"lint": "eslint src --ext ts",
+		"test": "node ./out/test/runTest.js"
+	},
+	"devDependencies": {
+		"@types/glob": "^7.2.0",
+		"@types/mocha": "^9.1.1",
+		"@types/node": "16.x",
+		"@types/vscode": "^1.70.0",
+		"@typescript-eslint/eslint-plugin": "^5.31.0",
+		"@typescript-eslint/parser": "^5.31.0",
+		"@vscode/test-electron": "^2.1.5",
+		"axios": "^0.27.2",
+		"cheerio": "^1.0.0-rc.12",
+		"eslint": "^8.20.0",
+		"glob": "^8.0.3",
+		"https": "^1.0.0",
+		"mocha": "^10.0.0",
+		"typescript": "^4.7.4"
+	},
+	"dependencies": {
+		"@vscode/webview-ui-toolkit": "^1.1.0"
+	}
 }
