--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
 		"typescript": "^4.7.4"
 	},
 	"dependencies": {
-		"@vscode/webview-ui-toolkit": "^1.1.0"
+		"@vscode/webview-ui-toolkit": "^1.1.0",
+		"sha1": "^1.1.1"
 	}
 }
