Fix several things to able to packaging

--- a/package.json
+++ b/package.json
@@ -1,37 +1,44 @@
 {
 	"name": "ejudge-submitter",
 	"displayName": "<e>judge Submitter",
-	"description": "",
+	"description": "An integrated <e>judge for Visual Studio Code",
+	"publisher": "gongpha",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/gongpha/ejudge-submitter"
+	},
+	"private": true,
 	"version": "0.0.1",
+	"license": "MIT",
 	"engines": {
-		"vscode": "^1.70.0"
+		"vscode": "^1.73.0"
 	},
 	"categories": [
 		"Other"
 	],
 	"activationEvents": [
-		"onCommand:ejudge-submitter.login"
+		"onCommand:login"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
 		"commands": [
 			{
-				"command": "ejudge-submitter.login",
+				"command": "login",
 				"title": "Login to <e>judge",
 				"category": "<e>judge"
 			},
 			{
-				"command": "ejudge-submitter.logout",
+				"command": "logout",
 				"title": "Logout from <e>judge",
 				"category": "<e>judge"
 			},
 			{
-				"command": "ejudge-submitter.openProblem",
+				"command": "openProblem",
 				"title": "Open a problem by ID",
 				"category": "<e>judge"
 			},
 			{
-				"command": "ejudge-submitter.manageAccount",
+				"command": "manageAccount",
 				"title": "Manage an account",
 				"category": "<e>judge"
 			}
@@ -39,23 +46,23 @@
 		"viewsContainers": {
 			"activitybar": [
 				{
-					"id": "ejudge-submitter",
-					"title": "<e>judge",
+					"id": "account",
+					"title": "<e>judge Account",
 					"icon": "$(file-code)"
 				}
 			]
 		},
 		"viewsWelcome": [
 			{
-				"view": "ejudge-submitter.courseTree",
-				"contents": "[Connect to <e>ejudge](command:ejudge-submitter.login)"
+				"view": "courseTree",
+				"contents": "[Connect to <e>judge](command:login)"
 			}
 		],
 		"views": {
-			"ejudge-submitter": [
+			"explorer": [
 				{
-					"id": "ejudge-submitter.courseTree",
-					"name": "Courses",
+					"id": "courseTree",
+					"name": "<e>judge Courses",
 					"type": "tree",
 					"visibility": "visible"
 				}
@@ -67,27 +74,23 @@
 		"compile": "tsc -p ./",
 		"watch": "tsc -watch -p ./",
 		"pretest": "npm run compile && npm run lint",
-		"lint": "eslint src --ext ts",
-		"test": "node ./out/test/runTest.js"
+		"lint": "eslint src --ext ts"
 	},
 	"devDependencies": {
-		"@types/glob": "^7.2.0",
-		"@types/mocha": "^9.1.1",
-		"@types/node": "16.x",
-		"@types/vscode": "^1.70.0",
-		"@typescript-eslint/eslint-plugin": "^5.31.0",
-		"@typescript-eslint/parser": "^5.31.0",
-		"@vscode/test-electron": "^2.1.5",
-		"axios": "^0.27.2",
-		"cheerio": "^1.0.0-rc.12",
-		"eslint": "^8.20.0",
-		"glob": "^8.0.3",
-		"https": "^1.0.0",
-		"mocha": "^10.0.0",
-		"typescript": "^4.7.4"
+		"@types/glob": "^8.0.0",
+		"@types/mocha": "^10.0.0",
+		"@types/node": "18.x",
+		"@types/vscode": "^1.73.0",
+		"@typescript-eslint/eslint-plugin": "^5.42.1",
+		"@typescript-eslint/parser": "^5.42.1",
+		"@vscode/test-electron": "^2.2.0",
+		"eslint": "^8.27.0",
+		"glob": "^8.0.3"
 	},
 	"dependencies": {
 		"@vscode/webview-ui-toolkit": "^1.1.0",
+		"axios": "^0.27.2",
+		"cheerio": "^1.0.0-rc.12",
 		"sha1": "^1.1.1"
 	}
 }
