Fix the viewer showing the previous submission

--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
 			"type": "object",
 			"title": "<e>judge Submitter",
 			"properties": {
-				"uploadHeader": {
+				"ejudge-submitter.uploadHeader": {
 					"type": "string",
 					"default": "Uploaded by <e>judge Submitter for problem #{problemID} ({problemTitle})",
 					"markdownDescription": "A header comment on the uploaded file\n - `{username}` : Account username\n - `{fullname}` : Account fullname\n - `{problemID}` : Problem ID\n - `{problemTitle}` : Problem title"
