--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"displayName": "<e>judge Submitter",
 	"description": "An integrated <e>judge for Visual Studio Code",
 	"publisher": "gongpha",
+	"icon": "icon.png",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/gongpha/ejudge-submitter"
